--- a/.dockerignore
+++ b/.dockerignore
@@ -1,23 +1,18 @@
-/node_modules
-/*/node_modules
-/*/*/node_modules
-/dist
-/*/dist
-/*/*/dist
-/reports
-/coverage
-/*/*/coverage
-/*/*/screenshots
+**/node_modules
+**/dist
+**/reports
+**/coverage
+**/screenshots
 .dockerignore
 .husky
-Dockerfile
+**/Dockerfile
 docker-compose.dev.yaml
-/coverage
-/cockroach-data
-.DS_Store
+**/coverage
+cockroach-data
+**/.DS_Store
 yarn-error.log
 lerna-debug.log
-*.tsbuildinfo
+**/*.tsbuildinfo
 
 .pnp.*
 .yarn/*
