--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -18,6 +18,7 @@ services:
       - /home/app/apps/front/node_modules
       - /home/app/apps/widget/node_modules
       - /home/app/apps/translator/node_modules
+      - /home/app/apps/content/node_modules
       - /home/app/package/api/node_modules
       - /home/app/package/components/node_modules
       - /home/app/package/types/node_modules
@@ -185,7 +186,35 @@ services:
     profiles:
       - translator-prod
 
-  crdb:
+  content_dev:
+    image: content_dev
+    build:
+      context: .
+      dockerfile: apps/content/Dockerfile
+      target: app-dev
+    ports:
+      - 3000:3000
+      - 8888:8888
+    volumes: *default_volumes
+    profiles:
+      - content-dev
+
+  content_prod:
+    image: content_prod
+    build:
+      context: .
+      dockerfile: apps/content/Dockerfile
+      target: app-production
+    ports:
+      - 3000:8000
+    volumes:
+      - /usr/app/dist
+      - /usr/app/node_modules
+      - ./apps/content/.env:/usr/app/.env
+    profiles:
+      - content-prod
+
+  content_crdb:
     image: cockroachdb/cockroach:v22.1.15
     ports:
       - "26257:26257"
@@ -193,3 +222,6 @@ services:
     command: start-single-node --insecure
     volumes:
       - "${PWD}/cockroach-data/crdb:/cockroach/cockroach-data"
+    profiles:
+      - content-prod
+      - content-dev
