--- a/apps/content/package.json
+++ b/apps/content/package.json
@@ -28,7 +28,10 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
     "@prisma/client": "4.13.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
+    "joi": "^17.9.2",
     "module-alias": "^2.2.2",
     "pm2": "~5.2.2",
     "reflect-metadata": "^0.1.13",
