--- a/apps/content/package.json
+++ b/apps/content/package.json
@@ -14,7 +14,7 @@
     "start:dev": "nest start --entryFile apps/content/src/main --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/apps/content/src/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint .",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -22,6 +22,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@make.org/api": "workspace:^",
     "@make.org/logger": "workspace:^",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
@@ -48,11 +49,11 @@
     "@types/node": "18.17.1",
     "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@typescript-eslint/parser": "^5.60.0",
+    "eslint": "8.21.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "29.5.0",
     "prettier": "^2.3.2",
     "prisma": "^4.13.0",
@@ -89,6 +90,7 @@
   },
   "_moduleAliases": {
     "@make.org/content": "./dist/apps/content",
-    "@make.org/logger": "./dist/package/logger"
+    "@make.org/logger": "./dist/package/logger",
+    "@make.org/api": "./dist/package/api"
   }
 }
