--- a/apps/content/package.json
+++ b/apps/content/package.json
@@ -31,6 +31,7 @@
     "@prisma/client": "4.13.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "compression": "^1.7.4",
     "dotenv": "^16.0.3",
     "joi": "^17.9.2",
     "module-alias": "^2.2.2",
@@ -43,6 +44,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/compression": "^1.7.2",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.0",
     "@types/module-alias": "^2",
