--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -42,6 +42,7 @@
     "js-yaml": "^4.1.0",
     "memory-cache": "~0.2.0",
     "node-mocks-http": "^1.11.0",
+    "object-hash": "3.0.0",
     "pm2": "~5.2.2",
     "prom-client": "^13.1.0",
     "query-string": "^7.1.1",
@@ -96,6 +97,7 @@
     "@types/loadable__server": "^5.12.6",
     "@types/memory-cache": "^0.2.2",
     "@types/node": "^18.11.9",
+    "@types/object-hash": "^3",
     "@types/react": "^17.0.52",
     "@types/react-dom": "^17.0.18",
     "@types/react-router-dom": "5.3.3",
