--- a/apps/widget/package.json
+++ b/apps/widget/package.json
@@ -39,6 +39,7 @@
     "http-proxy-middleware": "2.0.6",
     "i18next": "22.1.4",
     "memory-cache": "~0.2.0",
+    "object-hash": "3.0.0",
     "pm2": "~5.2.2",
     "react": "^17.0.2",
     "react-cookie": "~4.0.3",
@@ -73,6 +74,7 @@
     "@loadable/babel-plugin": "^5.13.2",
     "@types/babel__preset-env": "^7.9.2",
     "@types/memory-cache": "^0.2.2",
+    "@types/object-hash": "^3",
     "babel-loader": "8.2.5",
     "babel-plugin-convert-to-json": "^0.1.0",
     "file-loader": "^6.2.0",
