feat(content): generate prisma client for tsc check

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -131,6 +131,7 @@ stages:
     - corepack enable yarn
     - corepack prepare
     - yarn install
+    - yarn workspace @make.org/content prisma generate
   cache: []
 
 .build:
