feat(front): use content api to get consultation results

--- a/apps/front/.env.cypress
+++ b/apps/front/.env.cypress
@@ -5,3 +5,4 @@ FRONT_URL=http://localhost:9009
 FB_PIXEL_ID=260470104426586
 FB_CONVERSION_TOKEN=
 HOTJAR_TOKEN=3247007
+CONTENT_API_URL_SERVER_SIDE=http://content_dev:3000
