--- a/apps/front/.env.local
+++ b/apps/front/.env.local
@@ -24,3 +24,6 @@ FB_CONVERSION_TOKEN=
 
 # Hotjar token
 HOTJAR_TOKEN=3247007
+
+# API Content url
+CONTENT_API_URL_SERVER_SIDE=http://content_dev:3000
