--- a/apps/front/.env.mock
+++ b/apps/front/.env.mock
@@ -7,3 +7,4 @@ FRONT_URL=https://local.makeorg.tech:3000
 FB_PIXEL_ID=260470104426586
 FB_CONVERSION_TOKEN=
 HOTJAR_TOKEN=3247007
+CONTENT_API_URL_SERVER_SIDE=http://content_dev:3000
