chore(front): add twitter conversion api tracking

--- a/apps/front/.env.local
+++ b/apps/front/.env.local
@@ -27,3 +27,18 @@ HOTJAR_TOKEN=3247007
 
 # API Content url
 CONTENT_API_URL_SERVER_SIDE=http://content_dev:3000
+
+# TW pixel id
+TW_PIXEL_ID=o2q8v
+
+# TW API key
+TW_API_KEY=
+
+# TW API Secret
+TW_API_SECRET=
+
+# TW Acess Token
+TW_ACCESS_TOKEN=
+
+# TW Token Secret
+TW_TOKEN_SECRET=
