--- a/apps/front/.env.test
+++ b/apps/front/.env.test
@@ -6,3 +6,8 @@ FB_PIXEL_ID=260470104426586
 FB_CONVERSION_TOKEN=
 HOTJAR_TOKEN=3247007
 CONTENT_API_URL_SERVER_SIDE=http://localhost:3000
+TW_PIXEL_ID=o2q8v
+TW_API_KEY=
+TW_API_SECRET=
+TW_ACCESS_TOKEN=
+TW_TOKEN_SECRET=
