--- a/apps/widget/package.json
+++ b/apps/widget/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "sideEffects": false,
   "engines": {
-    "node": ">=14.17 <=16.9",
+    "node": "18.17",
     "yarn": "~3.2"
   },
   "dependencies": {
