--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.1.0",
   "engines": {
-    "node": ">=14.17 <=16.9",
+    "node": "18.17",
     "yarn": "~3.2"
   },
   "packageManager": "yarn@3.4.1",
