--- a/apps/content/package.json
+++ b/apps/content/package.json
@@ -28,7 +28,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
-    "@prisma/client": "4.13.0",
+    "@prisma/client": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "compression": "^1.7.4",
@@ -58,14 +58,14 @@
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "29.5.0",
     "prettier": "^2.3.2",
-    "prisma": "^4.13.0",
+    "prisma": "^5.1.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "29.0.5",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.2.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.9.5"
   },
   "jest": {
     "moduleFileExtensions": [
