--- a/package/ui/package.json
+++ b/package/ui/package.json
@@ -37,7 +37,7 @@
     "@svgr/cli": "^6.3.1",
     "core-js": "^3.24.1",
     "snapshot-diff": "^0.9.0",
-    "typescript": "~4.8.0",
+    "typescript": "^4.9.5",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
