--- a/package/utils/package.json
+++ b/package/utils/package.json
@@ -35,7 +35,7 @@
   "devDependencies": {
     "core-js": "^3.24.1",
     "mockdate": "^3.0.5",
-    "typescript": "~4.8.0",
+    "typescript": "^4.9.5",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   }
