--- a/apps/content/package.json
+++ b/apps/content/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "private": true,
   "engines": {
-    "node": ">=14.17 <=16.9",
+    "node": "18.17",
     "yarn": "~3.2"
   },
   "scripts": {
