fix(global): resolve display in binding mode with preserving other mode

--- a/apps/widget/package.json
+++ b/apps/widget/package.json
@@ -38,7 +38,7 @@
     "html-webpack-plugin": "^5.5.0",
     "http-proxy-middleware": "2.0.6",
     "i18next": "22.1.4",
-    "memory-cache": "~0.2.0",
+    "node-cache": "^5.1.2",
     "object-hash": "3.0.0",
     "pm2": "~5.2.2",
     "react": "^17.0.2",
@@ -73,7 +73,6 @@
     "@babel/register": "7.18.9",
     "@loadable/babel-plugin": "^5.13.2",
     "@types/babel__preset-env": "^7.9.2",
-    "@types/memory-cache": "^0.2.2",
     "@types/object-hash": "^3",
     "babel-loader": "8.2.5",
     "babel-plugin-convert-to-json": "^0.1.0",
