--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -40,7 +40,7 @@
     "http-proxy-middleware": "2.0.6",
     "i18next": "22.1.4",
     "js-yaml": "^4.1.0",
-    "memory-cache": "~0.2.0",
+    "node-cache": "^5.1.2",
     "node-mocks-http": "^1.11.0",
     "object-hash": "3.0.0",
     "pm2": "~5.2.2",
@@ -95,7 +95,6 @@
     "@types/deep-freeze": "^0.1.2",
     "@types/express": "^4.17.14",
     "@types/loadable__server": "^5.12.6",
-    "@types/memory-cache": "^0.2.2",
     "@types/node": "18.17.0",
     "@types/object-hash": "^3",
     "@types/react": "^17.0.52",
