--- a/package/utils/package.json
+++ b/package/utils/package.json
@@ -19,8 +19,8 @@
     "glider-js": "^1.7.7",
     "helmet-csp": "^3.4.0",
     "i18next": "22.1.4",
-    "memory-cache": "^0.2.0",
     "mockdate": "^3.0.5",
+    "node-cache": "^5.1.2",
     "node-mocks-http": "^1.11.0",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
