chore(global): design system storybook

--- a/package/designsystem/tsconfig.json
+++ b/package/designsystem/tsconfig.json
@@ -1,5 +1,15 @@
 {
   "extends": "../../tsconfig.json",
   "references": [
-  ]  
+    { "path": "../../package/assets" },
+    { "path": "../../package/ui" },
+    { "path": "../../package/utils" },
+  ],
+  "include": [
+    ".",
+    "../../package/assets",
+    "../../package/types",
+    "../../package/ui",
+    "../../package/utils",
+  ]
 }
