--- a/package/designsystem/package.json
+++ b/package/designsystem/package.json
@@ -4,13 +4,41 @@
   "private": true,
   "sideEffects": false,
   "dependencies": {
+    "@make.org/assets": "0.1.0",
+    "@make.org/ui": "0.1.0",
+    "@make.org/utils": "0.1.0",
+    "@storybook/react": "^7.2.3",
     "@types/styled-components": "5.1.26",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "styled-components": "5.3.5"
   },
   "scripts": {
-    "check": "tsc --noEmit"
+    "check": "tsc --noEmit",
+    "storybook:init": "npx storybook@latest init",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+    "@babel/preset-env": "^7.22.10",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
+    "@storybook/addon-essentials": "^7.2.3",
+    "@storybook/addon-interactions": "^7.2.3",
+    "@storybook/addon-links": "^7.2.3",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/addon-styling": "^1.3.6",
+    "@storybook/blocks": "^7.2.3",
+    "@storybook/react-webpack5": "^7.2.3",
+    "@storybook/testing-library": "^0.2.0",
+    "@types/babel__preset-env": "^7",
+    "@types/react": "^17.0.52",
+    "@types/react-dom": "^17.0.18",
+    "babel-loader": "^9.1.3",
+    "file-loader": "^6.2.0",
+    "storybook": "^7.2.3",
     "typescript": "^4.9.3"
   }
 }
