fix(global): twitter auth signature

--- a/apps/front/.env.local
+++ b/apps/front/.env.local
@@ -26,7 +26,7 @@ FB_CONVERSION_TOKEN=
 HOTJAR_TOKEN=3247007
 
 # API Content url
-CONTENT_API_URL_SERVER_SIDE=http://content_dev:3000
+CONTENT_API_URL_SERVER_SIDE=https://content.preprod.makeorg.tech
 
 # TW pixel id
 TW_PIXEL_ID=o2q8v
