feat(front): 3454 init build assembly V1

--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -242,3 +242,16 @@ services:
     volumes: *default_volumes
     profiles:
       - assembly-dev
+
+  assembly_ssr:
+    image: assembly_ssr
+    build:
+      context: .
+      dockerfile: apps/assembly/Dockerfile
+      target: app-ssr
+    ports:
+      - 3000:3000
+      - 8888:8888
+    volumes: *default_volumes
+    profiles:
+      - assembly-ssr
