--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,6 +47,7 @@
     "paths": {
       "@make.org/widget": ["./apps/widget/*"],
       "@make.org/front": ["./apps/front/*"],
+      "@make.org/assembly": ["./apps/assembly/*"],
       "@make.org/translator": ["./apps/translator/src/*"],
       "@make.org/content": ["./apps/content/*"],
       "@make.org/types": ["./package/types/*"],
