--- a/apps/assembly/package.json
+++ b/apps/assembly/package.json
@@ -20,13 +20,16 @@
     "dotenv": "^16.3.1",
     "dotenv-webpack": "^8.0.1",
     "express": "^4.17.3",
-    "i18next": "^23.5.0",
+    "favicons": "6.2.2",
+    "favicons-webpack-plugin": "^5.0.2",
     "pm2": "~5.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "5.3.5",
     "webpack": "^5.74.0",
-    "webpack-merge": "^5.8.0"
+    "webpack-manifest-plugin": "^3.1.1",
+    "webpack-merge": "^5.8.0",
+    "webpack-node-externals": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.18.10",
@@ -46,6 +49,7 @@
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@types/styled-components": "^5",
+    "@types/webpack-node-externals": "^3",
     "babel-loader": "8.2.5",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
@@ -54,6 +58,9 @@
   },
   "scripts": {
     "dev": "webpack serve --mode development --progress --color --config ./webpack/dev.config.js",
-    "build": "webpack --mode production --progress --color --config ./webpack/build.config.js && yarn version-build"
+    "build": "webpack --mode production --progress --color --config ./webpack/build.config.js && yarn version-build",
+    "server": "pm2-runtime start ecosystem.config.js --only app-production",
+    "server:dev": "pm2-runtime start ecosystem.config.js --only app-dev",
+    "version-build": "../../bin/version-build.js generate -d './dist/client' -p 'Make.org-assembly'"
   }
 }
