--- a/apps/assembly/package.json
+++ b/apps/assembly/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.3",
     "favicons": "6.2.2",
     "favicons-webpack-plugin": "^5.0.2",
+    "i18next": "^23.5.0",
     "pm2": "~5.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
