feat(global): update front packages
closes: MP-3511

--- a/apps/widget/package.json
+++ b/apps/widget/package.json
@@ -26,12 +26,12 @@
     "@types/jest": "^26.0.24",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
-    "compression": "~1.7.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "deep-freeze": "~0.0.1",
     "dotenv": "^10.0.0",
     "dotenv-webpack": "^7.1.1",
-    "express": "^4.17.3",
+    "express": "^4.18.2",
     "express-prom-bundle": "^6.5.0",
     "favicons": "6.2.2",
     "favicons-webpack-plugin": "^5.0.2",
@@ -42,7 +42,7 @@
     "object-hash": "3.0.0",
     "pm2": "~5.2.2",
     "react": "^18.2.0",
-    "react-cookie": "~4.0.3",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-head": "^3.4.2",
     "react-router-dom": "^5.3.4",
@@ -53,9 +53,9 @@
     "styled-components": "5.3.5",
     "terser-webpack-plugin": "^5.3.3",
     "ua-parser-js": "~0.7.31",
-    "universal-cookie": "~4.0.4",
+    "universal-cookie": "^4.0.4",
     "universal-cookie-express": "~4.0.0",
-    "uuid": "^8.3.0",
+    "uuid": "^8.3.2",
     "webpack": "^5.74.0",
     "webpack-manifest": "^1.0.8",
     "webpack-manifest-plugin": "^3.1.1",
@@ -64,12 +64,12 @@
     "winston": "~3.3.4"
   },
   "devDependencies": {
-    "@babel/core": "7.18.10",
+    "@babel/core": "^7.18.10",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-optional-chaining": "7.18.9",
-    "@babel/preset-env": "^7.16.0",
-    "@babel/preset-react": "^7.16.0",
-    "@babel/preset-typescript": "7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.18.9",
+    "@babel/preset-env": "^7.22.10",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
     "@babel/register": "7.18.9",
     "@loadable/babel-plugin": "^5.13.2",
     "@types/babel__preset-env": "^7.9.2",
