--- a/apps/assembly/package.json
+++ b/apps/assembly/package.json
@@ -19,7 +19,7 @@
     "@make.org/utils": "0.1.0",
     "dotenv": "^16.3.1",
     "dotenv-webpack": "^8.0.1",
-    "express": "^4.17.3",
+    "express": "^4.18.2",
     "favicons": "6.2.2",
     "favicons-webpack-plugin": "^5.0.2",
     "i18next": "^23.5.0",
@@ -33,14 +33,14 @@
     "webpack-node-externals": "^3.0.0"
   },
   "devDependencies": {
-    "@babel/core": "7.18.10",
+    "@babel/core": "^7.18.10",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-optional-chaining": "7.18.9",
-    "@babel/preset-env": "^7.16.0",
-    "@babel/preset-react": "^7.16.0",
-    "@babel/preset-typescript": "7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.18.9",
+    "@babel/preset-env": "^7.22.10",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
     "@babel/register": "7.18.9",
-    "@loadable/babel-plugin": "~5.13.2",
+    "@loadable/babel-plugin": "^5.13.2",
     "@simbathesailor/babel-plugin-use-what-changed": "^2.1.0",
     "@simbathesailor/use-what-changed": "^2.0.0",
     "@types/express": "^4.17.14",
@@ -49,7 +49,7 @@
     "@types/loadable__webpack-plugin": "^5",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
-    "@types/styled-components": "^5",
+    "@types/styled-components": "^5.1.26",
     "@types/webpack-node-externals": "^3",
     "babel-loader": "8.2.5",
     "file-loader": "^6.2.0",
