--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -24,17 +24,17 @@
     "axios": "~0.26.1",
     "axios-retry": "~3.2.6",
     "babel-register": "^6.26.0",
-    "compression": "~1.7.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "deep-freeze": "~0.0.1",
     "dotenv": "^10.0.0",
     "dotenv-webpack": "^7.1.1",
-    "express": "^4.17.3",
-    "express-prom-bundle": "~6.3.6",
+    "express": "^4.18.2",
+    "express-prom-bundle": "^6.5.0",
     "favicons": "6.2.2",
     "favicons-webpack-plugin": "^5.0.2",
     "glider-js": "^1.7.7",
-    "helmet-csp": "~3.4.0",
+    "helmet-csp": "^3.4.0",
     "history": "^5.3.0",
     "html-webpack-plugin": "^5.5.0",
     "http-proxy-middleware": "2.0.6",
@@ -47,11 +47,11 @@
     "prom-client": "^13.1.0",
     "query-string": "^7.1.1",
     "react": "^18.2.0",
-    "react-autosize-textarea": "~7.1.0",
+    "react-autosize-textarea": "^7.1.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
-    "react-facebook-login": "~4.1.1",
-    "react-head": "~3.4.2",
+    "react-facebook-login": "^4.1.1",
+    "react-head": "^3.4.2",
     "react-markdown": "^8.0.5",
     "react-modal": "^3.15.1",
     "react-router": "^5.3.4",
@@ -65,7 +65,7 @@
     "styled-components": "5.3.5",
     "terser-webpack-plugin": "^5.3.3",
     "ua-parser-js": "~0.7.31",
-    "universal-cookie": "~4.0.4",
+    "universal-cookie": "^4.0.4",
     "universal-cookie-express": "~4.0.0",
     "url-search-params-polyfill": "^8.1.1",
     "uuid": "^8.3.2",
@@ -78,14 +78,14 @@
     "yargs": "^17.5.1"
   },
   "devDependencies": {
-    "@babel/core": "7.18.10",
+    "@babel/core": "^7.18.10",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-optional-chaining": "7.18.9",
-    "@babel/preset-env": "^7.16.0",
-    "@babel/preset-react": "^7.16.0",
-    "@babel/preset-typescript": "7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.18.9",
+    "@babel/preset-env": "^7.22.10",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
     "@babel/register": "7.18.9",
-    "@loadable/babel-plugin": "~5.13.2",
+    "@loadable/babel-plugin": "^5.13.2",
     "@simbathesailor/babel-plugin-use-what-changed": "^2.1.0",
     "@simbathesailor/use-what-changed": "^2.0.0",
     "@svgr/cli": "^6.3.1",
