--- a/package/designsystem/package.json
+++ b/package/designsystem/package.json
@@ -8,7 +8,7 @@
     "@make.org/ui": "0.1.0",
     "@make.org/utils": "0.1.0",
     "@storybook/react": "^7.4.6",
-    "@types/styled-components": "5.1.26",
+    "@types/styled-components": "^5.1.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "5.3.5"
@@ -21,7 +21,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.18.9",
     "@babel/preset-env": "^7.22.10",
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
@@ -33,7 +33,7 @@
     "@storybook/blocks": "^7.4.6",
     "@storybook/react-webpack5": "^7.4.6",
     "@storybook/testing-library": "^0.2.0",
-    "@types/babel__preset-env": "^7",
+    "@types/babel__preset-env": "^7.9.2",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "babel-loader": "^9.1.3",
