feat(global): added routing client and ssr for panoramic
closes: MP-3517

--- a/apps/assembly/.env.local
+++ b/apps/assembly/.env.local
@@ -1,17 +1,17 @@
 # Use local certificates. Only for local env. 
 LOCAL_USE_CERTS=true
 
-# Use a local proxy on /backend. Only for local env.
-LOCAL_USE_PROXY=true
-
 # PORT
 PORT=3000
 
-# API url client side
-API_URL_CLIENT_SIDE=https://local.makeorg.tech:3000/backend
-
-# API URL server side
-API_URL_SERVER_SIDE=https://api.preprod.makeorg.tech
-
 # Front url
 FRONT_URL=https://local.makeorg.tech:3000
+
+# API Content url
+CONTENT_URL_SERVER_SIDE=https://content.preprod.makeorg.tech
+
+# API Assembly llm url
+ASSEMBLY_URL_SERVER_SIDE=""
+
+# Mixpanel token
+MIXPANEL_TOKEN=""
