--- a/apps/assembly/package.json
+++ b/apps/assembly/package.json
@@ -11,23 +11,40 @@
     "@loadable/component": "5.15.2",
     "@loadable/server": "5.15.2",
     "@loadable/webpack-plugin": "5.15.2",
+    "@make.org/api": "^0.1.0",
     "@make.org/assets": "0.1.0",
     "@make.org/designsystem": "0.1.0",
     "@make.org/logger": "workspace:^",
+    "@make.org/store": "0.1.0",
     "@make.org/types": "0.1.0",
     "@make.org/ui": "0.1.0",
     "@make.org/utils": "0.1.0",
+    "compression": "~1.7.3",
+    "cors": "^2.8.5",
+    "deep-freeze": "~0.0.1",
     "dotenv": "^16.3.1",
     "dotenv-webpack": "^8.0.1",
     "express": "^4.18.2",
     "favicons": "6.2.2",
     "favicons-webpack-plugin": "^5.0.2",
+    "http-proxy-middleware": "2.0.6",
     "i18next": "^23.5.0",
     "pm2": "~5.2.2",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-head": "~3.4.2",
+    "react-router": "^5.3.4",
+    "react-router-dom": "^5.3.4",
+    "serialize-javascript": "^6.0.1",
+    "serve-favicon": "^2.5.0",
+    "serve-static": "~1.14.2",
     "styled-components": "5.3.5",
+    "ua-parser-js": "~0.7.31",
+    "universal-cookie": "~4.0.4",
+    "universal-cookie-express": "~4.0.0",
     "webpack": "^5.74.0",
+    "webpack-manifest": "^1.0.8",
     "webpack-manifest-plugin": "^3.1.1",
     "webpack-merge": "^5.8.0",
     "webpack-node-externals": "^3.0.0"
@@ -43,15 +60,22 @@
     "@loadable/babel-plugin": "^5.13.2",
     "@simbathesailor/babel-plugin-use-what-changed": "^2.1.0",
     "@simbathesailor/use-what-changed": "^2.0.0",
+    "@types/compression": "^1.7.2",
+    "@types/cors": "^2.8.12",
+    "@types/deep-freeze": "^0.1.2",
     "@types/express": "^4.17.14",
     "@types/loadable__component": "^5",
     "@types/loadable__server": "^5.12.6",
     "@types/loadable__webpack-plugin": "^5",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "@types/serve-favicon": "^2.5.3",
+    "@types/serve-static": "^1",
     "@types/styled-components": "^5.1.26",
+    "@types/ua-parser-js": "^0.7.36",
     "@types/webpack-node-externals": "^3",
     "babel-loader": "8.2.5",
+    "babel-plugin-convert-to-json": "^0.1.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "webpack-cli": "^4.10.0",
