feat(global): added onboarding modal
closes: MP-3539

--- a/apps/assembly/package.json
+++ b/apps/assembly/package.json
@@ -34,6 +34,7 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-head": "~3.4.2",
+    "react-modal": "^3.15.1",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
     "serialize-javascript": "^6.0.1",
@@ -69,6 +70,7 @@
     "@types/loadable__webpack-plugin": "^5",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "@types/react-modal": "^3",
     "@types/serve-favicon": "^2.5.3",
     "@types/serve-static": "^1",
     "@types/styled-components": "^5.1.26",
