--- a/apps/front/.env.cypress
+++ b/apps/front/.env.cypress
@@ -1,5 +1,5 @@
 PORT=3000
-API_URL_SERVER_SIDE=http://api_mock:9000
+API_URL_SERVER_SIDE=http://api_consultation_mock:9000
 API_URL_CLIENT_SIDE=http://localhost:9000
 FRONT_URL=http://localhost:9009
 FB_PIXEL_ID=260470104426586
