feat(assembly): add content api, services and state

--- a/apps/assembly/package.json
+++ b/apps/assembly/package.json
@@ -19,9 +19,9 @@
     "@make.org/types": "0.1.0",
     "@make.org/ui": "0.1.0",
     "@make.org/utils": "0.1.0",
+    "axios": "~0.26.1",
     "compression": "~1.7.3",
     "cors": "^2.8.5",
-    "deep-freeze": "~0.0.1",
     "dotenv": "^16.3.1",
     "dotenv-webpack": "^8.0.1",
     "express": "^4.18.2",
@@ -29,6 +29,8 @@
     "favicons-webpack-plugin": "^5.0.2",
     "http-proxy-middleware": "2.0.6",
     "i18next": "^23.5.0",
+    "node-cache": "^5.1.2",
+    "object-hash": "^3.0.0",
     "pm2": "~5.2.2",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
@@ -63,11 +65,11 @@
     "@simbathesailor/use-what-changed": "^2.0.0",
     "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.12",
-    "@types/deep-freeze": "^0.1.2",
     "@types/express": "^4.17.14",
     "@types/loadable__component": "^5",
     "@types/loadable__server": "^5.12.6",
     "@types/loadable__webpack-plugin": "^5",
+    "@types/object-hash": "^3",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@types/react-modal": "^3",
