--- a/apps/assembly/package.json
+++ b/apps/assembly/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^18.2.0",
     "react-head": "~3.4.2",
     "react-modal": "^3.15.1",
+    "react-player": "^2.13.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
     "serialize-javascript": "^6.0.1",
