--- a/apps/assembly/package.json
+++ b/apps/assembly/package.json
@@ -27,6 +27,7 @@
     "express": "^4.18.2",
     "favicons": "6.2.2",
     "favicons-webpack-plugin": "^5.0.2",
+    "helmet-csp": "^3.4.0",
     "html-webpack-plugin": "^5.5.0",
     "http-proxy-middleware": "2.0.6",
     "i18next": "^23.5.0",
@@ -48,6 +49,7 @@
     "ua-parser-js": "~0.7.31",
     "universal-cookie": "~4.0.4",
     "universal-cookie-express": "~4.0.0",
+    "uuid": "^8.3.2",
     "webpack": "^5.74.0",
     "webpack-manifest": "^1.0.8",
     "webpack-manifest-plugin": "^3.1.1",
@@ -79,6 +81,7 @@
     "@types/serve-static": "^1",
     "@types/styled-components": "^5.1.26",
     "@types/ua-parser-js": "^0.7.36",
+    "@types/uuid": "^8.3.4",
     "@types/webpack-node-externals": "^3",
     "babel-loader": "8.2.5",
     "babel-plugin-convert-to-json": "^0.1.0",
