--- a/apps/assembly/package.json
+++ b/apps/assembly/package.json
@@ -27,6 +27,7 @@
     "express": "^4.18.2",
     "favicons": "6.2.2",
     "favicons-webpack-plugin": "^5.0.2",
+    "glider-js": "1.7.8",
     "helmet-csp": "^3.4.0",
     "html-webpack-plugin": "^5.5.0",
     "http-proxy-middleware": "2.0.6",
@@ -70,6 +71,7 @@
     "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/glider-js": "^1",
     "@types/loadable__component": "^5",
     "@types/loadable__server": "^5.12.6",
     "@types/loadable__webpack-plugin": "^5",
