feat(assembly): add llm to feed

--- a/apps/assembly/.env.local
+++ b/apps/assembly/.env.local
@@ -11,7 +11,7 @@ FRONT_URL=https://local.makeorg.tech:3000
 CONTENT_URL_SERVER_SIDE=https://content.preprod.makeorg.tech
 
 # API Assembly llm url
-ASSEMBLY_URL_SERVER_SIDE=""
+ASSEMBLY_URL_SERVER_SIDE=https://assembly.preprod.makeorg.tech
 
 # Mixpanel token
 MIXPANEL_TOKEN=""
