--- a/apps/assembly/package.json
+++ b/apps/assembly/package.json
@@ -47,6 +47,7 @@
     "serve-favicon": "^2.5.0",
     "serve-static": "~1.14.2",
     "styled-components": "5.3.5",
+    "terser-webpack-plugin": "^5.3.3",
     "ua-parser-js": "~0.7.31",
     "universal-cookie": "~4.0.4",
     "universal-cookie-express": "~4.0.0",
@@ -55,7 +56,8 @@
     "webpack-manifest": "^1.0.8",
     "webpack-manifest-plugin": "^3.1.1",
     "webpack-merge": "^5.8.0",
-    "webpack-node-externals": "^3.0.0"
+    "webpack-node-externals": "^3.0.0",
+    "winston": "~3.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
@@ -66,8 +68,6 @@
     "@babel/preset-typescript": "^7.22.5",
     "@babel/register": "7.18.9",
     "@loadable/babel-plugin": "^5.13.2",
-    "@simbathesailor/babel-plugin-use-what-changed": "^2.1.0",
-    "@simbathesailor/use-what-changed": "^2.0.0",
     "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
@@ -87,7 +87,11 @@
     "@types/webpack-node-externals": "^3",
     "babel-loader": "8.2.5",
     "babel-plugin-convert-to-json": "^0.1.0",
+    "core-js": "^3.24.1",
     "file-loader": "^6.2.0",
+    "html-webpack-inline-source-plugin": "1.0.0-beta.2",
+    "html-webpack-plugin": "^5.5.0",
+    "regenerator-runtime": "^0.13.7",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^3.11.3"
   },
