feat(assembly-ui): add cookie banner and modal

--- a/apps/assembly-ui/.env.local
+++ b/apps/assembly-ui/.env.local
@@ -15,3 +15,6 @@ ASSEMBLY_URL_SERVER_SIDE=https://assembly.preprod.makeorg.tech
 
 # Mixpanel token
 MIXPANEL_TOKEN=""
+
+# Cookie First API Token
+COOKIE_FIRST_TOKEN=""
