--- a/apps/assembly-ui/.env.test
+++ b/apps/assembly-ui/.env.test
@@ -3,3 +3,4 @@ CONTENT_URL_SERVER_SIDE=http://localhost:9001
 ASSEMBLY_URL_SERVER_SIDE=""
 FRONT_URL=http://localhost:9009
 MIXPANEL_TOKEN=""
+COOKIE_FIRST_TOKEN=""
