--- a/apps/assembly-ui/.env.mock
+++ b/apps/assembly-ui/.env.mock
@@ -3,3 +3,4 @@ CONTENT_URL_SERVER_SIDE=http://localhost:9001
 ASSEMBLY_URL_SERVER_SIDE=""
 FRONT_URL=https://local.makeorg.tech:3000
 MIXPANEL_TOKEN=""
+COOKIE_FIRST_TOKEN=""
