--- a/apps/assembly-ui/package.json
+++ b/apps/assembly-ui/package.json
@@ -35,6 +35,7 @@
     "node-cache": "^5.1.2",
     "object-hash": "^3.0.0",
     "pm2": "~5.2.2",
+    "query-string": "^7.1.1",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
