feat(tracking): init tracking package

--- a/apps/assembly-ui/Dockerfile
+++ b/apps/assembly-ui/Dockerfile
@@ -17,6 +17,7 @@ COPY ["package/components/package*.json", "./package/components/"]
 COPY ["package/types/package*.json", "./package/types/"]
 COPY ["package/assets/package*.json", "./package/assets/"]
 COPY ["package/utils/package*.json", "./package/utils/"]
+COPY ["package/tracking/package*.json", "./package/tracking/"]
 COPY ["package/ui/package*.json", "./package/ui/"]
 COPY ["package/designsystem/package*.json", "./package/designsystem/"]
 COPY ["package/store/package*.json", "./package/store/"]
