feat(global): implement tracking services and use them in assembly-ui

--- a/apps/assembly-ui/.env.dist
+++ b/apps/assembly-ui/.env.dist
@@ -1,21 +1,21 @@
 # Use local certificates. Only for local env. 
 USE_LOCAL_CERTS=true
 
-# Activate Make API proxy (see apps/assembly-ui/server/index.ts)
+# Activate Make API proxy (see apps/assembly-ui/server/index.ts). Only for local env. 
 USE_LOCAL_PROXY=true
 
 # PORT
 PORT=3000
 
 # Front url
-FRONT_URL=https://localhost:3000
+FRONT_URL=https://local.makeorg.tech:3000
 
 # Cookie First API Token
 COOKIE_FIRST_TOKEN=
 
 
 # Core API url client side
-CORE_API_URL_CLIENT_SIDE=https://localhost:3000/backend
+CORE_API_URL_CLIENT_SIDE=https://local.makeorg.tech:3000/backend
 
 # Core API URL server side
 CORE_API_URL_SERVER_SIDE=https://api.preprod.makeorg.tech
@@ -31,7 +31,7 @@ ASSEMBLY_URL_SERVER_SIDE=https://assembly.preprod.makeorg.tech
 MIXPANEL_TOKEN=
 
 # Facebook
-FB_PIXEL_ID=
+FB_PIXEL_ID=3668534183427105
 FB_CONVERSION_TOKEN=
 
 # Twitter
@@ -40,4 +40,3 @@ TW_API_KEY=
 TW_API_SECRET=
 TW_ACCESS_TOKEN=
 TW_TOKEN_SECRET=
-
