--- a/apps/assembly-ui/.env.mock
+++ b/apps/assembly-ui/.env.mock
@@ -1,6 +1,16 @@
 PORT=3000
 CONTENT_URL_SERVER_SIDE=http://localhost:9001
-ASSEMBLY_URL_SERVER_SIDE=""
+ASSEMBLY_URL_SERVER_SIDE=
 FRONT_URL=https://local.makeorg.tech:3000
-MIXPANEL_TOKEN=""
-COOKIE_FIRST_TOKEN=""
+MIXPANEL_TOKEN=
+COOKIE_FIRST_TOKEN=
+FB_PIXEL_ID=
+FB_CONVERSION_TOKEN=
+
+CORE_API_URL_CLIENT_SIDE=
+CORE_API_URL_SERVER_SIDE=
+TW_PIXEL_ID=
+TW_API_KEY=
+TW_API_SECRET=
+TW_ACCESS_TOKEN=
+TW_TOKEN_SECRET=
