--- a/apps/assembly-ui/package.json
+++ b/apps/assembly-ui/package.json
@@ -16,6 +16,7 @@
     "@make.org/designsystem": "0.1.0",
     "@make.org/logger": "workspace:^",
     "@make.org/store": "0.1.0",
+    "@make.org/tracking": "^0.1.0",
     "@make.org/types": "0.1.0",
     "@make.org/ui": "0.1.0",
     "@make.org/utils": "0.1.0",
@@ -86,6 +87,7 @@
     "@types/serve-static": "^1",
     "@types/styled-components": "^5.1.26",
     "@types/ua-parser-js": "^0.7.36",
+    "@types/universal-cookie": "^3.0.0",
     "@types/uuid": "^8.3.4",
     "@types/webpack-node-externals": "^3",
     "babel-loader": "8.2.5",
