--- a/apps/assembly-ui/.env.test
+++ b/apps/assembly-ui/.env.test
@@ -4,3 +4,13 @@ ASSEMBLY_URL_SERVER_SIDE=""
 FRONT_URL=http://localhost:9009
 MIXPANEL_TOKEN=""
 COOKIE_FIRST_TOKEN=""
+FB_PIXEL_ID=''
+FB_CONVERSION_TOKEN=''
+
+CORE_API_URL_CLIENT_SIDE=
+CORE_API_URL_SERVER_SIDE=
+TW_PIXEL_ID=
+TW_API_KEY=
+TW_API_SECRET=
+TW_ACCESS_TOKEN=
+TW_TOKEN_SECRET=
