--- a/package/tracking/package.json
+++ b/package/tracking/package.json
@@ -6,7 +6,10 @@
   "type": "module",
   "dependencies": {
     "@make.org/api": "0.1.0",
+    "@make.org/types": "0.1.0",
     "@make.org/utils": "0.1.0",
+    "axios": "~0.26.1",
+    "axios-retry": "~3.2.6",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
